crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_tests__impl_method_fails_module.snap
---
source: crates/nash-driver/src/compile/nitpick_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..))\nimport Builtin\ntrait Choose 'a where\n    choose : 'a -> unit\nimpl Choose bool where\n    choose True = ()\n"
---
nash::warning::unused_import

  ⚠ Unused import `Builtin`.
   ╭─[/Main.nash:3:8]
 2 │ import Primitive exposing (type bool(..))
 3 │ import Builtin
   ·        ───────
 4 │ trait Choose 'a where
   ╰────
  help: Remove the import.

nash::pattern::incomplete

  × Argument pattern is not exhaustive.
   ╭─[/Main.nash:7:12]
 6 │ impl Choose bool where
 7 │     choose True = ()
   ·            ────
   ╰────
  help: Missing patterns:

            False

        Use a case expression in the function body to handle the missing patterns.
