crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_tests__incomplete_case_fails_module.snap
---
source: crates/nash-driver/src/compile/nitpick_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..))\nimport Builtin\nf x =\n    case x of\n        True -> ()\n"
---
nash::warning::unused_import

  ⚠ Unused import `Builtin`.
   ╭─[/Main.nash:3:8]
 2 │ import Primitive exposing (type bool(..))
 3 │ import Builtin
   ·        ───────
 4 │ f x =
   ╰────
  help: Remove the import.

nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[/Main.nash:5:5]
 4 │     f x =
 5 │ ╭─▶     case x of
 6 │ ╰─▶         True -> ()
   ╰────
  help: Missing patterns:

            False

        Add the missing branches; use `todo` for unfinished bodies.
