crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_tests__redundant_case_fails_module.snap
---
source: crates/nash-driver/src/compile/nitpick_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..))\nimport Builtin\nf x =\n    case x of\n        _ -> ()\n        True -> ()\n"
---
nash::warning::unused_import

  ⚠ Unused import `Builtin`.
   ╭─[/Main.nash:3:8]
 2 │ import Primitive exposing (type bool(..))
 3 │ import Builtin
   ·        ───────
 4 │ f x =
   ╰────
  help: Remove the import.

nash::pattern::redundant

  × The 2nd pattern is unreachable.
   ╭─[/Main.nash:7:9]
 4 │ f x =
 5 │     case x of
 6 │         _ -> ()
 7 │         True -> ()
   ·         ─────
   ╰────
  help: Remove it; earlier patterns cover every matching value.
