crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_tests__trait_default_without_top_level_definitions_fails_module.snap
---
source: crates/nash-driver/src/compile/nitpick_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..))\nimport Builtin\ntrait Choose 'a where\n    choose : 'a -> bool -> unit\n    choose _ flag =\n        case flag of\n            True -> ()\n"
---
nash::warning::unused_import

  ⚠ Unused import `Builtin`.
   ╭─[/Main.nash:3:8]
 2 │ import Primitive exposing (type bool(..))
 3 │ import Builtin
   ·        ───────
 4 │ trait Choose 'a where
   ╰────
  help: Remove the import.

nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[/Main.nash:7:9]
 6 │         choose _ flag =
 7 │ ╭─▶         case flag of
 8 │ ╰─▶             True -> ()
   ╰────
  help: Missing patterns:

            False

        Add the missing branches; use `todo` for unfinished bodies.
