crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_tests__type_errors_precede_nitpick.snap
---
source: crates/nash-driver/src/compile/nitpick_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..))\nimport Builtin\nf : bool -> unit\nf True = True\n"
---
nash::warning::unused_import

  ⚠ Unused import `Builtin`.
   ╭─[/Main.nash:3:8]
 2 │ import Primitive exposing (type bool(..))
 3 │ import Builtin
   ·        ───────
 4 │ f : bool -> unit
   ╰────
  help: Remove the import.

nash::type::mismatch

  × Type mismatch: expected `unit`, found `bool`.
   ╭─[/Main.nash:5:10]
 3 │ import Builtin
 4 │ f : bool -> unit
   ·     ──────┬─────
   ·           ╰── declared type
 5 │ f True = True
   ·          ──┬─
   ·            ╰── body of `f`
   ╰────
