crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_tests__unsafe_argument_fails_module.snap
---
source: crates/nash-driver/src/compile/nitpick_tests.rs
expression: message
---
nash::pattern::incomplete

  × Argument pattern is not exhaustive.
   ╭─[/Main.nash:2:4]
 1 │ module Main exposing (..)
 2 │ f (x :: _) = x
   ·    ──────
   ╰────
  help: Missing patterns:

            []

        Use a case expression in the function body to handle the missing patterns.
