crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_tests__unsafe_destructure_fails_module.snap
---
source: crates/nash-driver/src/compile/nitpick_tests.rs
description: "module Main exposing (..)\nf xs =\n    let\n        (x :: rest) = xs\n    in\n    x\n"
---
nash::pattern::incomplete

  × Binding pattern is not exhaustive.
   ╭─[/Main.nash:4:10]
 3 │     let
 4 │         (x :: rest) = xs
   ·          ─────────
 5 │     in
   ╰────
  help: Missing patterns:

            []

        Use a case expression to handle the missing patterns.

nash::warning::unused_definition

  ⚠ Unused definition `rest`.
   ╭─[/Main.nash:4:15]
 3 │     let
 4 │         (x :: rest) = xs
   ·               ────
 5 │     in
   ╰────
  help: Remove the definition if it is not needed.
